--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cardview_light_background"
     tools:context=".search.MainActivity"
     >
 
@@ -12,6 +14,9 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="Search"
+      android:lines="1"
+      android:inputType="text"
+      android:imeOptions="flagNoFullscreen"
       app:layout_constraintEnd_toStartOf="@id/submitBtn"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -26,14 +31,62 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recyclerView"
+  <View
+      android:layout_width="match_parent"
+      android:layout_height="1dp"
+      android:layout_marginTop="4dp"
+      android:background="@android:color/black"
+      app:layout_constraintTop_toBottomOf="@id/searchView"
+      />
+
+  <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="0dp"
-      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_margin="8dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/searchView"
+      tools:visibility="invisible"
+      >
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchView"
+        />
+  </androidx.cardview.widget.CardView>
+
+  <TextView
+      android:id="@+id/titleView"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="24dp"
+      android:layout_marginEnd="8dp"
+      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/searchView"
+      tools:text="Title"
+      />
+
+  <TextView
+      android:id="@+id/contentView"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="8dp"
+      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/titleView"
+      tools:text="Lorem ipsum dolor sit amet"
       />
 
   <ProgressBar
